@@ -633,7 +633,10 @@
       
       \item (Windows only)  \code{dir.create()} did not check the length
       of the path to create, and so could overflow a buffer and crash
-      \R.  \PR{17206}
+      \R.  (\PR{17206})
+      
+      \item On some systems, very small hexadecimal numbers in hex notation
+      would underflow to zero.  (\PR{17199})
 
       %% Not yet ported from trunk
       \item \code{pmin()} and \code{pmax()} now work again for
